# pinesawfly

./: README.md  main.py  plugin_test.py  pyproject.toml  requirements.txt  前端.md  计划任务.md
.codegraph/: codegraph.db  codegraph.db-shm  codegraph.db-wal  daemon.pid
core/: exception_handler.py  plugin_interface.py  plugin_loader.py
modules/: editor_module.py  file_module.py  generic_rule_engine.py
pinesawfly/: __init__.py  ai_analysis_service.py  app.py  audit_bridge.py  rule_manager.py  scan_worker.py  stylemanager.py  syntax_highlighter.py
plugins/example_plugin/: __init__.py  example_plugin.py
plugins/php_plugin/: __init__.py  php_parser.py  php_plugin.py  route_auth_analyzer.py  rule_engine.py  taint_analyzer.py
plugins/php_plugin/rules/: default_rules.json
plugins/php_plugin/utils/: file_processor.py
qml/App/: AppRoot.qml  Main.qml
qml/App/pages/: AboutPage.qml  ColorPage.qml  ComponentsPage.qml  HomePage.qml  PageFrame.qml  ReportPage.qml  RulesPage.qml  SettingsPage.qml  TypographyPage.qml
qml/Core/Controls/: Button.qml  Card.qml  Checkbox.qml  CodeEditor.qml  ComboBox.qml  Dialog.qml  FAB.qml  LogoIcon.qml  Ripple.qml  Slider.qml  Switch.qml  Tabs.qml  TextArea.qml  TextField.qml
qml/Core/Styles/: Fonts.qml  Theme.qml  qmldir
qml/md3/Core/: qmldir
rules/: java_rules.json  php_rules.json  python_rules.json
templates/ai/: analysis_prompt.md
templates/reports/: html.css  html.html  markdown.md  pdf.css  pdf.html
