[project]
name = "pinesawfly"
version = "0.1.0"
description = "PySide6/QML desktop security audit tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.41.0",
    "pyside6==6.6.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-lua>=0.5.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
pinesawfly = "pinesawfly.app:main"
